This is with JPA & Crud repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=h2-demo
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-logging.level.org.springframework.jdbc=DEBUG
-
+#logging.level.org.springframework.jdbc=DEBUG
+#spring.batch.jdbc.initialize-schema=
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.generate-unique-name=false
 spring.datasource.name=Products
